<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- FACEBOOK LOGIN -->
    <string name="facebook_app_id" translatable="false">747782012628133</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb747782012628133</string>

    <!-- GOOGLE -->
    <string name="google_browser_key" translatable="false">AIzaSyBSlvem5jVlKoFGpiIS_2-tj8Q9xhPlcEw</string>

    <string name="main_activity_description">Trouver un restaurant et inviter vos collègues pour déjeuner !</string>
    <string name="main_activity_logo">Logo de l\'application</string>
    <string name="button_login_facebook">Se connecter avec Facebook</string>
    <string name="button_login_google">Se connecter avec Google</string>
    <string name="button_login_twitter">Se connecter avec Twitter</string>
    <string name="button_login_email">Se connecter avec un email</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="error_authentication_canceled">Authentification annulée…</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite…</string>
    <string name="loading">Chargement en cours</string>
    <string name="lunch">Repas</string>
    <string name="settings">Paramètres</string>
    <string name="logout">Déconnexion</string>
    <string name="navigation_drawer_open">Ouverture du menu</string>
    <string name="navigation_drawer_close">Fermeture du menu</string>
    <string name="map_view">Carte</string>
    <string name="list_view">Liste</string>
    <string name="workmates">Collègues</string>
    <string name="search">Recherche</string>
    <string name="toolbar_search_restaurant">Recherche des restaurants</string>
    <string name="toolbar_search_workmates">Recherche des collègues</string>
    <string name="profile_picture">Image de profil</string>
    <string name="google_current_location">Je suis là</string>
    <string name="permission_denied">Permission refusée</string>
    <string name="no_phone">Ce restaurant n\'a pas de numéro de téléphone</string>

    <!-- PLACE TEXT -->
    <string name="place_name">Nom</string>
    <string name="place_address">Adresse</string>
    <string name="place_opening_hours">Heures d\'ouverture</string>
    <string name="place_distance">Distance</string>
    <string name="place_image_workmate">Image des collègues</string>
    <string name="place_number_workmates">Nombre</string>
    <string name="place_rating">Classement du restaurant</string>
    <string name="place_image">Image du restaurant</string>


    <!-- OPENING HOURS -->
    <string name="opening_hours_not_indicated">Non indiqué</string>
    <string name="opening_hours_always_open" translatable="false">24h/24</string>
    <string name="opening_hours_open_soon">Ouvre bientôt</string>
    <string name="opening_hours_open_until">Ouvert jusqu\'à</string>
    <string name="opening_hours_close">Fermé</string>
    <string name="opening_hours_close_soon">Ferme bientôt</string>
    <string name="opening_hours_close_today">Fermé aujourd\'hui</string>

    <!-- WORKMATE TEXT -->
    <string name="workmate_title">Titre</string>
    <string name="website">Site web</string>
    <string name="like">Aimer</string>
    <string name="dislike">Ne pas aimer</string>
    <string name="call">Appeler</string>
    <string name="no_website">Ce restaurant n\'a pas de site web</string>
    <string name="success_add_place_like">PlaceLike écrit avec l\'ID</string>
    <string name="success_add_place_lunch">PlaceLunch écrit avec l\'ID</string>
    <string name="error_add_place_like">Erreur en ajoutant un placeLike</string>
    <string name="error_add_place_lunch">Erreur en ajoutant un placeLunch</string>
    <string name="place_joining">vient !</string>
    <string name="place_dont_decided">n\'a pas encore décidé</string>
    <string name="place_not_selected">Vous n\'avez pas encore sélectionné un restaurant</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="settings_saved">Paramètres sauvegardés</string>

    <string name="button_check" translatable="false">Button check</string>
    <string name="button_uncheck" translatable="false">Button uncheck</string>


    <!-- Sync -->
    <string name="title_activity_settings">Paramètres</string>

    <!-- Preference Titles -->
    <string name="notification_header">Notification</string>

    <!-- Sync Preferences -->
    <string name="send_notification_title">Envoyez-moi une notification au déjeuner</string>
    <string name="key_notification" translatable="false">key_notification</string>

    <string name="notification_title">Vous déjeunez quelque part ce midi !</string>
</resources>
